@@ -3,6 +3,10 @@
 	* src/modules/mcmd.c (mcmd): Fixed an additional error message
 	inconsistency due to a close being called before an errno check.  
 
+	* doc/pdsh.1.in: Added note to LIMITATIONS about how the maximum
+	number of simultaneous jobs that can be executed is limited by the
+	maximum number of concurrent threads that can be spawned.
+
 2003-09-12  Albert Chu <chu11@llnl.gov>
 
 	* src/pdsh/dsh.c (dsh): Error message from pthread_create()
